# base-fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: on_push.yaml  slack.yaml
alembic/: env.py
alembic/versions/: 5a9b60e0966c_initial.py  fef3cdd76a50_initial.py
app/: __init__.py  main.py
app/core/: constants.py  settings.py
app/db/: __init__.py  session.py
app/db/models/: base.py  user_mgmt.py  util.py
app/helpers/: exceptions.py  logger.py  response.py
app/middleware/: __init__.py  logger.py  middleware.py  security.py
app/v1/auth/: __init__.py  controller.py  dao.py  dto.py  schema.py  service.py  view.py
tests/functional/: conftest.py  test_auth.py
